--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,18 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.Viewbinding" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.Viewbinding" parent="Theme.Material3.DayNight">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
     <style name="Theme.Viewbinding" parent="Base.Theme.Viewbinding" />
+
+    <style name="Theme.Viewbinding.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="Theme.Viewbinding.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="Theme.Viewbinding.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
