feat(viewbinding): complete viewbindinng sample

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/navigation_home"
-        android:name="com.mcgrady.xarch.viewbinding.sample.ui.home.HomeFragment"
+        android:name="com.mcgrady.libs.viewbinding.sample.ui.home.HomeFragment"
         android:label="@string/title_home"
         tools:layout="@layout/fragment_home" />
 
@@ -25,13 +25,13 @@
 
     <fragment
         android:id="@+id/navigation_dashboard"
-        android:name="com.mcgrady.xarch.viewbinding.sample.ui.home.HomeFragment"
+        android:name="com.mcgrady.libs.viewbinding.sample.ui.home.HomeFragment"
         android:label="@string/title_dashboard"
         tools:layout="@layout/fragment_dashboard" />
 
     <fragment
         android:id="@+id/navigation_notifications"
-        android:name="com.mcgrady.xarch.viewbinding.sample.ui.home.HomeFragment"
+        android:name="com.mcgrady.libs.viewbinding.sample.ui.home.HomeFragment"
         android:label="@string/title_notifications"
         tools:layout="@layout/fragment_notifications" />
 </navigation>
